# ytsum

./: .gitignore  README.md  main.py  pyproject.toml  youtube_transcript_downloader.py
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
src/youtube_summarizer/: __init__.py  cli.py  downloader.py  exporter.py  summarizer.py
tests/: __init__.py  test_downloader.py  test_exporter.py  test_summarizer.py
